# what-a-bot

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
chat-bot/: Dockerfile  pyproject.toml
chat-bot/chat_bot/: bot.py  run.py
chat-bot/scripts/: run.py  tests.py
chat-bot/tests/: test_chat_bot.py
service/: Dockerfile  README.md  pyproject.toml
service/libs/: whatabot-0.1.0-py3-none-any.whl
service/scripts/: tests.py
service/service/: __init__.py  run.py
service/service/blueprints/api/: __init__.py
service/service/blueprints/api/v1/resources/: subjects.py
service/tests/: conftest.py  test_endpoints.py  test_service.py
whatabot/: README.md  pyproject.toml
whatabot/scripts/: tests.py
whatabot/tests/: test_whatabot.py
whatabot/whatabot/ia/: text.py
whatabot/whatabot/search/: wikipedia.py
