[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.scripts]
test = "scripts.tests:run_tests"
web-cov = "scripts.tests:open_web_coverage"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_restful = "^0.3.8"
whatabot = {path = "libs/whatabot-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-flask = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
