[tool.poetry]
name = "whatabot"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.scripts]
test = "scripts.tests:run_tests"
web-cov = "scripts.tests:open_web_coverage"

[tool.poetry.dependencies]
python = "^3.8"
wikipedia-api = "^0.5.4"
gensim = "^3.8.3"
gensim-sum-ext = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
